[tool.poetry]
name = "pycountsasafd"
version = "0.1.0"
description = "pycounts for individual assignment 1 DSCI524"
authors = ["Abdul Safdar"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
